--- a/src/components/part-page/styles.module.css
+++ b/src/components/part-page/styles.module.css
@@ -1,7 +1,9 @@
 
 .page {
-  page-break-before: always;
   display: flex;
   flex-direction: column;
   padding: 32px;
+}
+.page + .page {
+  page-break-before: always;
 }
