--- a/src/components/print/styles.module.css
+++ b/src/components/print/styles.module.css
@@ -4,10 +4,9 @@
   margin-right: auto;
 }
 
-/*
-I don't know why ``@meaia print {`` doesn't seem to be working.
-*/
-.noPrint {
-  display: none;
-  background: green;
+@media print {
+  .noPrint {
+    display: none;
+    background: green;
+  }
 }
