--- a/src/components/part-page/styles.module.css
+++ b/src/components/part-page/styles.module.css
@@ -4,6 +4,20 @@
   flex-direction: column;
   padding: 32px;
 }
-.page + .page {
-  page-break-before: always;
+
+@media screen {
+  .page {
+    margin-top: 1em
+  }
+}
+
+@media print {
+
+  .page {
+    box-shadow: none !important;
+  }
+
+  .page + .page {
+    page-break-before: always;
+  }
 }
